--- a/css/main.css
+++ b/css/main.css
@@ -205,7 +205,7 @@ header {
   display: block;
   width: 100%;
   height: 100%;
-  animation-duration: 30s;
+  animation-duration: 50s;
   animation-name: clouds;
   animation-iteration-count: infinite;
   animation-timing-function: linear;
@@ -220,11 +220,11 @@ header {
   display: block;
   width: 100%;
   height: 100%;
-  animation-duration: 30s;
+  animation-duration: 50s;
   animation-name: clouds;
   animation-iteration-count: infinite;
   animation-timing-function: linear;
-  animation-delay: 15s;
+  animation-delay: 25s;
 }
 .clouds-anim > *{
   position: relative;
@@ -1294,9 +1294,109 @@ ul.page_cloud-ts-list li:before {
 .page_cloud-faq-container{
   padding-bottom: 80px;
 }
+
+.page_cloud-connect-scheme-top {
+    margin-top: 30px;
+    display: flex;
+    flex-wrap: wrap;
+}
+
+span.lbl {}
+
+.page_cloud-connect-scheme-tumb {
+    display: flex;
+    align-items: center;
+    margin-right: 36px;
+}
+
+.page_cloud-connect-scheme-tumb .lbl {
+    color: #35385c;
+    font-weight: 700;
+    margin-right: 15px;
+}
+
+.page_cloud-connect-scheme-tumb input {
+    display: none;
+}
+
+.page_cloud-connect-scheme-tumb label {
+    margin: 0;
+    padding: 2px 7px;
+    background: #e9f0fd;
+    border-radius: 22px;
+    overflow: hidden;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    width: 85px;
+    cursor: pointer;
+}
+
+.page_cloud-connect-scheme-tumb .txt {
+    font-size: 14px;
+    font-weight: 700;
+    color: #35385c;
+}
+
+.page_cloud-connect-scheme-tumb .circle {
+    width: 30px;
+    height: 30px;
+    background: #35385c;
+    display: block;
+    border-radius: 50%;
+    transform: translateX(-22px);
+}
+
+.page_cloud-connect-scheme-tumb input:checked + label .circle {
+    background: #279cff;
+    transform: translateX(22px);
+}
+
+.page_cloud-connect-scheme-img {
+  max-width: 820px;
+  margin: 58px auto 0;
+  position: relative;
+}
+
+.page_cloud-connect-scheme-bl {
+  position: absolute;
+  top: 0;
+  left: 0;
+  text-align: center;
+}
+
+.page_cloud-connect-scheme-bl .image {
+  width: 86px;
+  height: 86px;
+  box-shadow: 0px 2px 26px 0px rgba(38, 85, 222, 0.35);
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: 0 auto;
+  margin-bottom: 14px;
+}
+
+.js-scheme-img2 {
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
+.page_cloud-connect-scheme-bl .ttl {
+  font-size: 14px;
+  font-weight: 700;
+  color: #35385c;
+}
+
 @media(max-width: 991px){
   .page_cloud-faq h2 {
     font-size: 24px;
+  }
+}
+@media(max-width: 767px){
+  .page_cloud-connect-scheme {
+    display: none;
   }
 }
 /*page_cloud*/
