--- a/css/main.css
+++ b/css/main.css
@@ -696,6 +696,7 @@ input.error, textarea.error {
   font-weight: 700;
   margin-top: 40px;
   box-shadow: 0px 2px 26px 0px rgba(38,85,222,0.35);
+  transition: 0.3s;
 }
 .visa-button:hover {
   background: #2980cf;
@@ -804,21 +805,27 @@ input.error, textarea.error {
 .five{
   font-size: 140px;
   font-weight: 700;
-  color: #1f2040;
+}
+.five span {
+  background: linear-gradient(to bottom, #279cff, #2559e0);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  color: #2559e0;
 }
 .bl-txt-1{
   text-align: center;
   font-size: 14px;
-  color: #1f2040;
+  color: #279cff;
   padding-left: 50px;
-  font-weight: 500;
+  font-weight: 700;
+  padding-top: 8px;
 }
 .bl-txt-2{
   text-align: left;
   font-size: 14px;
   color: #1f2040;
   padding-left: 50px;
-  margin-top: 50px;
+  margin-top: 25px;
   font-weight: 500
 }
 .manage-title{
@@ -846,7 +853,7 @@ input.error, textarea.error {
   color: #35385c;
   font-weight: 700;
   font-size: 14px;
-  padding-bottom: 11px;
+  padding-bottom: 5px;
 }
 .manage-block-txt{
   color: #35385c;
@@ -869,9 +876,15 @@ input.error, textarea.error {
   color: #279afe;
   margin: 0 auto;
 }
-.easy-txt1:after {content: '';display: block;position: absolute;top: 50%;left: 50%;z-index: -1;height: 1px;width: 335px;background: url(../img/easy.png);}
+.easy-txt1:after {content: '';display: block;position: absolute;top: 50%;left: 55%;z-index: -1;height: 3px;width: 335px;background: url(../img/easy.jpg);}
 .easy-txt1.non:after {
   display: none;
+}
+.easy-txt1 span {
+  background: linear-gradient(to bottom, #279cff, #2559e0);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  color: #2559e0;
 }
 
 .easy-txt1 img {
@@ -883,6 +896,7 @@ input.error, textarea.error {
   font-weight: 500;
   text-align: center;
   margin-top: 15px;
+  color: #0f101e;
 }
 .easy-ttl{
   padding-bottom: 60px;
@@ -931,6 +945,12 @@ input.error, textarea.error {
   font-weight: 700;
   margin-top: 40px;
   box-shadow: 0px 2px 26px 0px rgba(38,85,222,0.35);
+  transition: 0.3s;
+}
+.inter-button:hover {
+  background: #2980cf;
+  color: #fff;
+  text-decoration: none;
 }
 .inter-img{
     position: relative;
@@ -999,6 +1019,11 @@ input.error, textarea.error {
   padding-bottom: 80px;
 }
 
+@media(min-width: 1199px){
+  .manage-right-image img {
+    right: calc(((100vw - 980px) / 2)*-1);
+  }
+}
 @media(min-width: 992px){
     .manage {
         overflow: hidden;
@@ -1012,6 +1037,10 @@ input.error, textarea.error {
         position: absolute;
         width: auto;
         max-width: 9999px;
+    }
+    .manage-block-img {
+      max-width: 45px;
+      width: 100%;
     }
 }
 @media(max-width: 991px){
@@ -1044,6 +1073,8 @@ input.error, textarea.error {
   .easy-txt1:after {
     display: none;
   }
+
+
 
   .easy-block {
     margin-bottom: 35px;
@@ -1081,6 +1112,32 @@ input.error, textarea.error {
 
   .faq h2 {
     font-size: 24px;
+  }
+}
+@media(max-width: 489px){
+  .monthly-bl {
+    max-width: 400px;
+    padding: 30px;
+    margin: 0 auto;
+  }
+
+  .five {
+    margin: 0 auto;
+  }
+
+  .monthly-bl-txt {
+    flex-direction: column;
+  }
+
+  .bl-txt-1 {
+    padding: 0;
+    text-align: center;
+  }
+
+  .bl-txt-2 {
+    padding: 0;
+    text-align: center;
+    margin-top: 10px;
   }
 }
 /*page_subscr*/
